# serl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md
docs/: overview_structure.md  real_franka.md  real_franka_bin_relocation.md  real_franka_cable_route.md  real_franka_pcb.md  real_franka_peg.md  sim_quick_start.md
examples/: bc_policy.py  bc_policy_robotiq.py  run_rbc_actor.sh  run_rbc_learner.sh
examples/async_bin_relocation_fwbw_drq/: async_drq_randomized.py  record_bc_demos.py  record_demo.py  record_failed_image.py  record_goals_images.py  record_transitions.py  run_actor.sh  run_bc.sh  run_bw_learner.sh  run_fw_learner.sh  test_classifier.py  train_bw_classifier.sh  train_fw_classifier.sh  train_reward_classifier.py
examples/async_cable_route_drq/: async_drq_randomized.py  record_demo.py  run_actor.sh  run_bc.sh  run_learner.sh  test_classifier.py  train_bc.py  train_reward_classifier.py
examples/async_drq_sim/: async_drq_sim.py  run_actor.sh  run_learner.sh  tmux_launch.sh  tmux_rlpd_launch.sh
examples/async_pcb_insert_drq/: async_drq_randomized.py  config.py  record_demo.py  run_actor.sh  run_bc.sh  run_learner.sh  train_bc.py
examples/async_peg_insert_drq/: config.py  (+4 more)
franka_sim/: .gitignore  README.md  requirements.txt
kuka_server/: package.xml  setup.cfg  setup.py
kuka_server/kuka_server/: robot_interface.py  utils.py  wait_for_message.py
robot_infra/: README.md  __init__.py  franka_server.py  setup.py
serl_launcher/: .gitignore  README.md  requirements.txt  setup.py
serl_robot_infra/: README.md  setup.py
(+293 files in other folders)
